--- a/libopus/build.gradle
+++ b/libopus/build.gradle
@@ -18,14 +18,14 @@ android {
         }
 
         ndk {
-            abiFilters "armeabi", "armeabi-v7a", "arm64-v8a"
+            abiFilters /*"armeabi", */"armeabi-v7a", "arm64-v8a"
         }
     }
 
     externalNativeBuild {
         cmake {
             path "src/main/cpp/libopus/CMakeLists.txt"
-            version "3.10.2"
+            version "3.22.1"
         }
     }
 
@@ -45,7 +45,7 @@ android {
         abortOnError false
     }
 
-    ndkVersion '16.1.4479499'
+    ndkVersion '29.0.14033849'
 }
 
 dependencies {
